fixed line spacing in descriptions and work

--- a/src/stylesheets/_logic.scss
+++ b/src/stylesheets/_logic.scss
@@ -1,4 +1,5 @@
 div.logic{
+	white-space: pre-wrap;
 	p.description{
 		color: #888;
 	}
